--- a/data/lang/ko-kr.json
+++ b/data/lang/ko-kr.json
@@ -1,3 +1,7 @@
 {
-    "Guid":"플래이어 왼쪽위가 기준입니다!"
+    "guid":"플래이어 왼쪽위가 기준입니다!",
+    "fail":{
+        "d":"실패 : 문제가 발생했습니다",
+        "save":"실패 : 파일이 없습니다"
+    }
 }
