--- a/data/lang/ko-kr.json
+++ b/data/lang/ko-kr.json
@@ -1,5 +1,5 @@
 {
-    "guid":"플래이어 왼쪽위가 기준입니다!",
+    "guid":"플래이어 왼쪽위가 기준입니다! 안내 : 코드가 너무 복잡해요... 식물추가 못하겠다..",
     "fail":{
         "d":"실패 : 문제가 발생했습니다",
         "save":"실패 : 파일이 없습니다"
