--- a/data/lang/ko-kr.json
+++ b/data/lang/ko-kr.json
@@ -4,8 +4,12 @@
     "d": "실패 : 문제가 발생했습니다",
     "save": "실패 : 파일이 없습니다"
   },
-  "plants": {
+  "items": {
+    "HOE": "괭이",
+    "SHOVEL": "삽",
+    "SICKLE": "낫",
     "rice": "쌀",
-    "tomato": "토마토"
+    "tomato": "토마토",
+    "NONE": "없음"
   }
 }
