마우스 커서 변경, 주석 조금

--- a/data/lang/ko-kr.json
+++ b/data/lang/ko-kr.json
@@ -1,5 +1,5 @@
 {
-  "guid": "제발 글로벌좀 그만 써주세요 ㅠㅠ",
+  "guid": "newkini-dev.com",
   "fail": {
     "d": "실패 : 문제가 발생했습니다",
     "save": "실패 : 파일이 없습니다"
