Revert "add eng"
This reverts commit da3ee7b1fd7eb0fe219337a5279a17a8ebc214f9.

--- a/data/lang/ko-kr.json
+++ b/data/lang/ko-kr.json
@@ -1,8 +1,8 @@
 {
   "guid": "newkini-dev.com",
   "fail": {
-    "save": "실패 : 문제가 발생했습니다",
-    "d": "실패 : 파일이 없습니다"
+    "d": "실패 : 문제가 발생했습니다",
+    "save": "실패 : 파일이 없습니다"
   },
   "items": {
     "HOE": "괭이",
@@ -15,6 +15,5 @@
     "NONE": "없음"
   },
   "count" : "겟수",
-  "name" : "이름",
-  "select" : "선택"
+  "name" : "이름"
 }
