--- a/data/lang/ko-kr.json
+++ b/data/lang/ko-kr.json
@@ -12,7 +12,8 @@
     "tomato": "토마토",
     "sunFlower": "해바라기",
     "carrots": "당근",
-    "NONE": "없음"
+    "NONE": "없음",
+    "WATER": "물뿌리게"
   },
   "count" : "겟수",
   "name" : "이름",
