영어추가, 버전수정

--- a/data/lang/en-us.json
+++ b/data/lang/en-us.json
@@ -12,7 +12,8 @@
       "tomato": "tomato",
       "sunFlower": "sunflower",
       "carrots": "carrots",
-      "NONE": "none"
+      "NONE": "none",
+      "WATER": "watering can"
     },
     "count" : "get number",
     "name" : "name",
