--- a/data/lang/ko-kr.json
+++ b/data/lang/ko-kr.json
@@ -13,7 +13,8 @@
     "sunFlower": "해바라기",
     "carrots": "당근",
     "NONE": "없음",
-    "WATER": "물뿌리게"
+    "WATER": "물뿌리게",
+    "VITAMIN": "비타민"
   },
   "count" : "겟수",
   "name" : "이름",
