help추가(유저 요청사항)

--- a/data/lang/en-us.json
+++ b/data/lang/en-us.json
@@ -1,5 +1,5 @@
 {
-    "guid": "newkini-dev.com",
+    "guid": "h:help",
     "fail": {
       "save": "failed: a problem occurred",
       "d": "failed: file not found"
