오류 해결 이제 설치와 기능 구현만 남았다

--- a/data/lang/ko-kr.json
+++ b/data/lang/ko-kr.json
@@ -14,7 +14,9 @@
     "carrots": "당근",
     "NONE": "없음",
     "WATER": "물뿌리게",
-    "VITAMIN": "비타민"
+    "VITAMIN": "비타민",
+    "box": "상자",
+    "sprinkle": "스프링 쿨러"
   },
   "count" : "겟수",
   "name" : "이름",
