Revert "Merge branch 'main' into dev/opning"
This reverts commit f06ee65c6f1ce5f80272c15d78e93cbf9c74435c, reversing
changes made to c4e223e31dc81bc514ac94833a5668d624854725.

--- a/data/lang/ko-kr.json
+++ b/data/lang/ko-kr.json
@@ -14,13 +14,9 @@
     "carrots": "당근",
     "NONE": "없음",
     "WATER": "물뿌리게",
-    "VITAMIN": "비타민",
-    "box": "상자",
-    "sprinkle": "스프링 쿨러"
+    "VITAMIN": "비타민"
   },
   "count" : "겟수",
   "name" : "이름",
-  "select" : "선택",
-  "seed" : "씨앗",
-  "gold" : "돈"
+  "select" : "선택"
 }
