--- a/data/lang/ko-kr.json
+++ b/data/lang/ko-kr.json
@@ -14,9 +14,13 @@
     "carrots": "당근",
     "NONE": "없음",
     "WATER": "물뿌리게",
-    "VITAMIN": "비타민"
+    "VITAMIN": "비타민",
+    "box": "상자",
+    "sprinkle": "스프링 쿨러"
   },
   "count" : "겟수",
   "name" : "이름",
-  "select" : "선택"
+  "select" : "선택",
+  "seed" : "씨앗",
+  "gold" : "돈"
 }
