feat : 자라는 속도를 일정하게 변경
파이게임 타이머로 자라는 속도를 일정하게 변경
아직 테스트 못함

--- a/data/lang/ko-kr.json
+++ b/data/lang/ko-kr.json
@@ -10,11 +10,11 @@
     "SICKLE": "낫",
     "rice": "쌀",
     "tomato": "토마토",
-    "sunFlower": "해바라기",
+    "sun_flower": "해바라기",
     "carrots": "당근",
-    "NONE": "없음",
-    "WATER": "물뿌리게",
-    "VITAMIN": "비타민",
+    "none": "없음",
+    "water": "물뿌리게",
+    "vitamin": "비타민",
     "box": "상자",
     "sprinkle": "스프링 쿨러"
   },
